# rimesa

./: CMakeLists.txt  README.md
rimesa/include/rimesa/: biased_prior-inl.h  biased_prior.h  initialization.h  misc.h  rimesa.h  types.h
rimesa/src/: biased_prior.cpp  initialization.cpp  misc.cpp  rimesa.cpp
